Add panel show/hide reviewer comments frontend

--- a/app/assets/stylesheets/panels.scss
+++ b/app/assets/stylesheets/panels.scss
@@ -8,6 +8,7 @@ main.panels {
       font-size: .95rem;
     }
   }
+  input#panel_show_review_comments { margin-top: 0.75em; }
   table {
     caption {
       text-align: left;
