--- a/app/views/grants/_form.html.haml
+++ b/app/views/grants/_form.html.haml
@@ -29,7 +29,7 @@
   .cell.small-12.medium-3
     = f.label :publish_date, 'Publish Date', class: 'middle'
   .cell.small-12.medium-9
-    = f.text_field :publish_date, value: date_mmddyyyy(grant.publish_date), required: true, disabled: disable_fields, class: 'small-12 medium-4', aria: { 'described-by': 'publishDateHelp' }
+    = f.text_field :publish_date, value: date_mmddyyyy(grant.publish_date ||= Date.today), required: true, disabled: disable_fields, class: 'small-12 medium-4', aria: { 'described-by': 'publishDateHelp' }
     %p.help-text#publishDateHelp
       Once completed, your grant will publish on this date.
 
