add JS datepicker startDate. #722

--- a/app/views/grants/_form.html.haml
+++ b/app/views/grants/_form.html.haml
@@ -89,6 +89,7 @@
   $(function() {
     $( "#grant_publish_date, #grant_submission_open_date, #grant_submission_close_date, #grant_panel_date, #grant_review_open_date, #grant_review_close_date" ).fdatepicker({
       format: 'mm/dd/yyyy',
+      startDate: new Date(),
       closeIcon: ' X ',
       closeButton: true
     });
