--- a/app/views/grant_submissions/submissions/reviews/show.html.haml
+++ b/app/views/grant_submissions/submissions/reviews/show.html.haml
@@ -25,8 +25,9 @@
   - else
     - @review.criteria_reviews.each do |reviewed_criterion|
       .grid-x-container.grid-padding-y
-        .criterion
-          %h5= reviewed_criterion.criterion.name
+        - criterion_name = reviewed_criterion.criterion.name
+        .criterion{id: "#{criterion_name.parameterize(separator: '_')}-criterion"}
+          %h5= criterion_name
           .grid-x
             .cell.small-12.medium-2
               Score:
