add margin for button after UI comments on PR. #726

--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -39,6 +39,9 @@ main {
           color: $dark-gray;
           padding: 0.5em 1em;
         }
+        .clear-button {
+          margin-left: 2em;
+        }
         .score_value,{
           display: inline-block;
           margin-right: .5em;
