--- a/app/assets/stylesheets/grant_permissions.scss
+++ b/app/assets/stylesheets/grant_permissions.scss
@@ -1,4 +1,8 @@
 main.grant_permissions {
+  .notification-checkbox{
+    padding-top: .3rem;
+  }
+
   .select2-selection {
     border-radius: 0 !important;
     border: 1px solid #cacaca !important;
