--- a/app/views/layouts/_header_help_links.html.haml
+++ b/app/views/layouts/_header_help_links.html.haml
@@ -3,6 +3,8 @@
   %ul.menu
     %li
       = link_to 'Overview', 'https://data2health.github.io/competitions-project/'
+    %li
+      = link_to 'Release Notes', release_index_path
     - if !user_signed_in?
       %li
         = link_to 'Logging In', 'https://data2health.github.io/competitions-project/howto_login.html'
