Changes associated with PR comments. #608  #761

--- a/app/views/layouts/_header_help_links.html.haml
+++ b/app/views/layouts/_header_help_links.html.haml
@@ -4,7 +4,4 @@
     %li
       = link_to 'Overview', 'https://data2health.github.io/competitions-project/'
     %li
-      = link_to 'Release Notes', release_index_path
-    - if !user_signed_in?
-      %li
-        = link_to 'Logging In', 'https://data2health.github.io/competitions-project/howto_login.html'
+      = link_to 'Release Notes', release_documentation_index_path
