--- a/app/views/documentation/release/index.html.haml
+++ b/app/views/documentation/release/index.html.haml
@@ -1,26 +1,40 @@
+%h3
+  Release Notes
+%p
+  The code and further documentation about #{COMPETITIONS_CONFIG[:application_name]} can be found in the
+  #{link_to "GitHub repository", "https://github.com/NUARIG/competitions"}.
+
 %ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
   %li.accordion-item{"data-accordion-item" => ""}
-    %a.accordion-title{:href => "#"} 1.8
+    %a.accordion-title{:href => "#"} 1.8 (February, 17, 2021)
     .accordion-content{"data-tab-content" => ""}
       %p
         %ul
           %li
-            Add license.
+            Add MIT license.
+            #{github_issue_link(issue: 750)}
           %li
             Add grant creator request notifications for system admins.
+            #{github_issue_link(issue: 728)}
           %li
             Add ability to unselect review criteria score.
+            #{github_issue_link(issue: 726)}
           %li
-            Changes to datepicker.
+            Add startDate to datepicker.
+            #{github_issue_link(issue: 722)}
+            #{github_issue_link(issue: 771)}
           %li
-            Changes to help text.
+            Add toggle for comments in the panel view.
+            #{github_issue_link(issue: 752)}
           %li
             Fix submission export bug.
+            #{github_issue_link(issue: 762)}
           %li
-            Update gems.
+            Update nokogiri gem.
+            #{github_issue_link(issue: 748)}
 
   %li.accordion-item{"data-accordion-item" => ""}
-    %a.accordion-title{:href => "#"} 1.7
+    %a.accordion-title{:href => "#"} 1.7 (January 29, 2021)
     .accordion-content{"data-tab-content" => ""}
       %p
         %ul
@@ -28,7 +42,7 @@
             Adds submission exports to excel.
 
   %li.accordion-item{"data-accordion-item" => ""}
-    %a.accordion-title{:href => "#"} 1.6
+    %a.accordion-title{:href => "#"} 1.6 (January 13, 2021)
     .accordion-content{"data-tab-content" => ""}
       %p
         %ul
@@ -42,7 +56,7 @@
             Fixes for grant permission form layout.
 
   %li.accordion-item{"data-accordion-item" => ""}
-    %a.accordion-title{:href => "#"} 1.5
+    %a.accordion-title{:href => "#"} 1.5 (December 17, 2020)
     .accordion-content{"data-tab-content" => ""}
       %p
         %ul
@@ -60,7 +74,7 @@
             Fix javascript confirmation dialogues on delete.
 
   %li.accordion-item{"data-accordion-item" => ""}
-    %a.accordion-title{:href => "#"} 1.4
+    %a.accordion-title{:href => "#"} 1.4 (December 3, 2020)
     .accordion-content{"data-tab-content" => ""}
       %p
         %ul
@@ -74,7 +88,7 @@
             Fix update method in saml_sessions controller.
 
   %li.accordion-item{"data-accordion-item" => ""}
-    %a.accordion-title{:href => "#"} 1.3
+    %a.accordion-title{:href => "#"} 1.3 (November 16, 2020)
     .accordion-content{"data-tab-content" => ""}
       %p
         %ul
@@ -98,7 +112,7 @@
             Pin footer to window bottom.
 
   %li.accordion-item{"data-accordion-item" => ""}
-    %a.accordion-title{:href => "#"} 1.2
+    %a.accordion-title{:href => "#"} 1.2 (October 22, 2020)
     .accordion-content{"data-tab-content" => ""}
       %p
         %ul
@@ -110,7 +124,7 @@
             Increase configurable elements.
 
   %li.accordion-item{"data-accordion-item" => ""}
-    %a.accordion-title{:href => "#"} 1.1
+    %a.accordion-title{:href => "#"} 1.1 (October 6, 2020)
     .accordion-content{"data-tab-content" => ""}
       %p
         %ul
@@ -142,7 +156,7 @@
             Add hover text to table headings.
 
   %li.accordion-item{"data-accordion-item" => ""}
-    %a.accordion-title{:href => "#"} 1.0
+    %a.accordion-title{:href => "#"} 1.0 (September 15, 2020)
     .accordion-content{"data-tab-content" => ""}
       %p
         %ul
