--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -19,4 +19,4 @@
         = mail_to COMPETITIONS_CONFIG[:contact_email]
       %p
         = precede 'v' do
-          = link_to Competitions::Application::VERSION, release_index_path
+          = link_to Competitions::Application::VERSION, release_documentation_index_path
