--- a/app/views/documentation/release/index.html.haml
+++ b/app/views/documentation/release/index.html.haml
@@ -47,13 +47,11 @@
       %p
         %ul
           %li
-            This release adds the following.
+            Add reviewer invitation workflow.
           %li
-            Reviewer invitation workflow.
+            Add Autocomplete to users in grant permissions.
           %li
-            Autocomplete to users in grant permissions.
-          %li
-            Fixes for grant permission form layout.
+            Fix grant permission form layout.
 
   %li.accordion-item{"data-accordion-item" => ""}
     %a.accordion-title{:href => "#"} 1.5 (December 17, 2020)
