--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,5 +1,5 @@
 %h2
-  Edit Your Password
+  Change Your Password
 = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
   .field
     = f.label :email
@@ -8,11 +8,11 @@
     %div
       Currently waiting confirmation for: #{resource.unconfirmed_email}
   .field
-    = f.label :current_password
+    = f.label :current_password, 'Current Password'
     %i (we need your current password to confirm your changes)
     = f.password_field :current_password, autocomplete: "current-password"
   .field
-    = f.label :password
+    = f.label :password, 'New Password'
     %i (leave blank if you don't want to change it)
     = f.password_field :password, autocomplete: "new-password"
     - if @minimum_password_length
@@ -20,7 +20,7 @@
         = @minimum_password_length
         characters minimum
   .field
-    = f.label :password_confirmation
+    = f.label :password_confirmation, 'Password Confirmation'
     = f.password_field :password_confirmation, autocomplete: "new-password"
   .actions
     = f.submit "Update", class: 'button'
