change applicants to submitters. #785

--- a/app/views/grant_submissions/forms/edit.html.haml
+++ b/app/views/grant_submissions/forms/edit.html.haml
@@ -20,7 +20,7 @@
 
   %p
     %em
-      Applicants will respond to questions defined on this page to apply to your grant. Questions may be organized into multiple sections.
+      Submitters will respond to questions defined on this page to apply to your grant. Questions may be organized into multiple sections.
 
   - unless @grant.form.available?
     .callout.warning
