--- a/app/views/panels/_submission.html.haml
+++ b/app/views/panels/_submission.html.haml
@@ -1,7 +1,7 @@
 - review_data = review_data(submission)
 %tr
   %td
-    submission.applicant
+    submission.submitter
   %td
     = link_to submission.title, grant_submission_path(grant, submission)
   %td
