--- a/app/views/reviewer_mailer/assignment.html.haml
+++ b/app/views/reviewer_mailer/assignment.html.haml
@@ -6,7 +6,7 @@
   %br
   = link_to @submission.title, grant_submission_url(@grant, @submission)
   %br
-  by #{full_name(@review.applicant)}
+  by #{full_name(@review.submitter)}
 
   %br
   for #{@grant.name}.
