--- a/app/views/grant_permission_mailers/submission_mailer/submitted_notification.html.haml
+++ b/app/views/grant_permission_mailers/submission_mailer/submitted_notification.html.haml
@@ -5,8 +5,8 @@
   has a new submission for Grant:
   #{ link_to @grant.name, grant_url(@grant) }.
 %p
-  Applicant:
-  = full_name(@applicant)
+  Submitter:
+  = full_name(@submitter)
   %br
   Submission:
   = link_to "#{@submission.title}", grant_submission_url(@grant, @submission)
