--- a/app/views/grant_submissions/submissions/reviews/index.html.haml
+++ b/app/views/grant_submissions/submissions/reviews/index.html.haml
@@ -16,9 +16,9 @@
     .grid-x
       .cell.small-12.medium-2
         %strong
-          Applicant:
+          Submitter:
       .cell.small-12.medium-10
-        = full_name(@submission.applicant)
+        = full_name(@submission.submitter)
     .grid-x
       .cell.small-12.medium-2
         %strong
