--- a/app/views/panels/_panel_content.html.haml
+++ b/app/views/panels/_panel_content.html.haml
@@ -16,7 +16,7 @@
           Average Scores
       %tr
         %th{width: 200}
-          = sort_link(@q, :applicant_last_name, 'Applicant')
+          = sort_link(@q, :submitter_last_name, 'Submitter')
         %th
           = sort_link(@q, :title, 'Submission')
         %th{width: 150}
@@ -31,8 +31,8 @@
     - @submissions.each do |submission|
       - review_data = review_data(submission)
       %tr.submission{ data: { submission: submission.id } }
-        %td.applicant{ data: { applicant: submission.applicant.id } }
-          = sortable_full_name(submission.applicant)
+        %td.submitter{ data: { submitter: submission.submitter.id } }
+          = sortable_full_name(submission.submitter)
         %td.title{ data: { title: submission.id } }
           = link_to submission.title, grant_panel_submission_path(@grant, submission)
         %td.reviews
