--- a/app/views/profiles/reviews/index.html.haml
+++ b/app/views/profiles/reviews/index.html.haml
@@ -30,7 +30,7 @@
         %th
           = sort_link(@q, :grant_name, 'Grant',{}, {title: 'Sort on Grant'})
         %th
-          = sort_link(@q, :applicant_last_name, 'Applicant',{}, {title: 'Sort on Applicant'})
+          = sort_link(@q, :submitter_last_name, 'Submitter',{}, {title: 'Sort on Submitter'})
         %th
           = sort_link(@q, :submission_title, 'Submission Title',{}, {title: 'Sort on Submission Title'})
         %th
@@ -49,7 +49,7 @@
             = review.grant.name
             = "(unpublished)" unless grant_published
           %td
-            = sortable_full_name(review.submission.applicant)
+            = sortable_full_name(review.submission.submitter)
           %td
             = link_to_if grant_published, truncate(review.submission.title), grant_submission_path(review.grant, review.submission)
           %td
