--- a/app/views/grant_reviewers/index.html.haml
+++ b/app/views/grant_reviewers/index.html.haml
@@ -21,13 +21,17 @@
     .top-bar-left
       %ul.menu
         %li.menu-text
-          Add a Reviewer by Email Address
+          Actions:
         %li
-          = form_for :grant_reviewer, url: grant_reviewers_path(@grant) do |f|
-            .input-group
-              = f.email_field :reviewer_email, placeholder: 'Email', class: 'input-group-field'
-              .input-group-button
-                = f.submit 'Look Up', class: 'button small'
+          Add Reviewer by Email Address
+          %div{ style: 'display: inline-block' }
+            = form_for :grant_reviewer, url: grant_reviewers_path(@grant) do |f|
+              .input-group
+                = f.email_field :reviewer_email, placeholder: 'Email', class: 'input-group-field'
+                .input-group-button
+                  = f.submit 'Look Up', class: 'button small'
+        %li
+          = link_to 'View Invited Reviewers', grant_invitations_path(@grant)
 
   %hr
 
