Update documentation/release page #806

--- a/app/views/documentation/release/index.html.haml
+++ b/app/views/documentation/release/index.html.haml
@@ -11,6 +11,18 @@
       %p
         %ul
           %li
+            Add Reviewer invitation status page per Grant
+            #{github_issue_link(issue: 770)}
+          %li
+            Refactor Grant Permission notification methods
+            #{github_issue_link(issue: 801)}
+
+  %li.accordion-item{"data-accordion-item" => ""}
+    %a.accordion-title{:href => "#"} 1.9.1 (March 17, 2021)
+    .accordion-content{"data-tab-content" => ""}
+      %p
+        %ul
+          %li
             Update pagination settings to include all submissions on xlsx exports.
             #{github_issue_link(issue: 795)}
 
