Fix release notes for 1.10.

--- a/app/views/documentation/release/index.html.haml
+++ b/app/views/documentation/release/index.html.haml
@@ -6,16 +6,19 @@
 
 %ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
   %li.accordion-item{"data-accordion-item" => ""}
-    %a.accordion-title{:href => "#"} 1.9.1 (March 17, 2021)
+    %a.accordion-title{:href => "#"} 1.10 (April 22, 2021)
     .accordion-content{"data-tab-content" => ""}
       %p
         %ul
           %li
-            Add Reviewer invitation status page per Grant
+            Add Reviewer invitation status page per Grant.
             #{github_issue_link(issue: 770)}
           %li
-            Refactor Grant Permission notification methods
+            Refactor Grant Permission notification methods.
             #{github_issue_link(issue: 801)}
+          %li
+            Add change password page.
+            #{github_issue_link(issue: 575)}
 
   %li.accordion-item{"data-accordion-item" => ""}
     %a.accordion-title{:href => "#"} 1.9.1 (March 17, 2021)
