--- a/app/views/documentation/release/index.html.haml
+++ b/app/views/documentation/release/index.html.haml
@@ -11,7 +11,7 @@
       %p
         %ul
           %li
-            Add Reviewer invitation status page per Grant.
+            Add Reviewer invitation status page per grant.
             #{github_issue_link(issue: 770)}
           %li
             Refactor Grant Permission notification methods.
