changes from PR comments #820. #786

--- a/app/views/grant_permission_mailers/submission_mailer/submitted_notification.html.haml
+++ b/app/views/grant_permission_mailers/submission_mailer/submitted_notification.html.haml
@@ -8,6 +8,9 @@
   Submitter:
   = full_name(@submitter)
   %br
+  Applicants:
+  = full_name_list(@applicants)
+  %br
   Submission:
   = link_to "#{@submission.title}", grant_submission_url(@grant, @submission)
 %p
