And the last changes for the PR #820. #786

--- a/app/views/grant_permission_mailers/submission_mailer/submitted_notification.html.haml
+++ b/app/views/grant_permission_mailers/submission_mailer/submitted_notification.html.haml
@@ -8,9 +8,10 @@
   = 'Applicant'.pluralize(@applicants.count) + ':'
   = full_name_list(@applicants)
   %br
-  Submitter:
-  = full_name(@submitter)
-  %br
+  - unless @applicants.include?(@submitter)
+    Submitter:
+    = full_name(@submitter)
+    %br
   Submission:
   = link_to "#{@submission.title}", grant_submission_url(@grant, @submission)
 %p
