Add text decoration hover to anchor tags in p tags to make the link more obvious #815

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -121,6 +121,11 @@ header {
         background-color: #e6e6e6;
       }
     }
+    p {
+      a {
+        &:hover { text-decoration: underline 1px solid; }
+      }
+    }
   }
 
   footer {
