more work on applicants. #249

--- a/app/views/grant_submissions/submissions/_form.html.haml
+++ b/app/views/grant_submissions/submissions/_form.html.haml
@@ -5,6 +5,12 @@
   .cell.small-12.medium-9
     = f.text_field(attribute: :title)
 
+.grid-x
+  .cell.small-12
+    %fieldset.fieldset
+      %legend= 'Applicants'
+      = render partial: 'submission_applicant_fields', locals: { submission: @submission, f: f }
+
 - @submission.form.sections.sort_by(&:display_order).each do |section|
   .grid-x
     .cell.small-12
