PR comment changes. #817

--- a/app/views/grants/_review_guidance.html.haml
+++ b/app/views/grants/_review_guidance.html.haml
@@ -6,6 +6,6 @@
       = f.label :review_guidance, 'Review Guidance'
     %p
       %em
-        You may provide instructions and guidelines to help them score the submissions.
+        You may optionally provide instructions and guidelines to help reviewers score the submission.
     = f.hidden_field :review_guidance, id: 'review_guidance'
     %trix-editor(input='review_guidance')
