--- a/app/views/grant_submissions/submissions/index.html.haml
+++ b/app/views/grant_submissions/submissions/index.html.haml
@@ -40,7 +40,7 @@
           .text-right
             %ul.menu
               %li.search
-                = f.search_field :submitter_first_name_or_submitter_last_name_or_title_cont, placeholder: 'Submitter or Project'
+                = f.search_field :applicants_first_name_or_applicants_last_name_or_title_cont, placeholder: 'Applicant or Project'
               %li.search
                 = f.submit 'Search', class: 'button'
             .reset
@@ -58,7 +58,7 @@
             Scores
       %tr
         %th
-          = sort_link(@q, :submitter_last_name, 'Applicants',{}, {title: 'Sort on Applicants'})
+          = sort_link(@q, :applicants_last_name, 'Applicants',{}, {title: 'Sort on Applicants'})
         %th
           = sort_link(@q, :title, 'Title',{}, {title: 'Sort on Title'})
         %th
@@ -79,12 +79,11 @@
     %tbody
       - @submissions.each do |submission|
         - review_data = review_data(submission)
-        - submitter   = submission.submitter
 
         %tr.submission{data: { submission: submission.id } }
           %td
-            - owners(submission).each do |owner|
-              = link_to sortable_full_name(owner), grant_submission_path(@grant, submission)
+            - submission.applicants.each do |applicant|
+              = link_to sortable_full_name(applicant), grant_submission_path(@grant, submission)
               %br
 
           %td
